Sprint II - Entrega MVP

--- a/Projeto_MVP_Analise_de_Dados.ipynb
+++ b/Projeto_MVP_Analise_de_Dados.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "srBkM2Z1V_aI"
       ],
-      "authorship_tag": "ABX9TyOMPC/tyC1wtB/0vkO+mq6p",
+      "authorship_tag": "ABX9TyNaiTiNitKwrVRJkV6pgCUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4220,35 +4220,38 @@
       "cell_type": "code",
       "source": [
         "# Cálculo da média de preço por tipo de acomodação\n",
-        "media_por_tipo = df_clean.groupby('room_type')['price'].mean().sort_values(ascending=False).round(2)\n",
+        "media_por_tipo = df_clean.groupby(\"room_type\")[\"price\"].mean().sort_values(ascending=False).round(2)\n",
         "\n",
         "# Visualização em gráfico de barras\n",
         "plt.figure(figsize=(8, 4))\n",
-        "sns.barplot(x=media_por_tipo.values, y=media_por_tipo.index, palette='Blues_d')\n",
-        "plt.title('Preço Médio por Tipo de Acomodação')\n",
-        "plt.xlabel('Preço Médio (R$)')\n",
-        "plt.ylabel('Tipo de Acomodação')\n",
+        "sns.barplot(x=media_por_tipo.values,\n",
+        "            y=media_por_tipo.index,\n",
+        "            palette='Blues_d',\n",
+        "            legend=False)  # <- CORREÇÃO AQUI\n",
+        "plt.title(\"Preço Médio por Tipo de Acomodação\")\n",
+        "plt.xlabel(\"Preço Médio (R$)\")\n",
+        "plt.ylabel(\"Tipo de Acomodação\")\n",
         "plt.show()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 507
         },
         "id": "yUQ1xxuWdzBc",
-        "outputId": "d1da57a1-205a-4535-b7f1-4a6eff243d45"
+        "outputId": "3aee9bcb-760b-4d8e-8b1c-300e6ab4feb0"
       },
-      "execution_count": 73,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-73-2582720510.py:6: FutureWarning: \n",
+            "/tmp/ipython-input-79-4001708049.py:6: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
-            "  sns.barplot(x=media_por_tipo.values, y=media_por_tipo.index, palette='Blues_d')\n"
+            "  sns.barplot(x=media_por_tipo.values,\n"
           ]
         },
         {
@@ -4306,7 +4309,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 420
         },
         "id": "oIuMr-YemIPr",
         "outputId": "c16ae687-9b91-4840-c566-4a8700bbd096"
@@ -4870,7 +4873,6 @@
         "### 🚀 Próximos Passos Possíveis:\n",
         "\n",
         "- Aplicar técnicas de machine learning supervisionado para prever preços com base em múltiplas variáveis;\n",
-        "- Incluir análise sazonal com dados de disponibilidade (`availability_365`);\n",
         "- Explorar mapas interativos para visualização geográfica dos dados.\n",
         "\n",
         "---\n",
